# ffmeg_edu

./: CMakeLists.txt  chapter_0.cpp  hello_world_0.c
cmake/: FindFFMPEG.cmake
